[workspace]

resolver = "2"

members = ["api", "pg_replicate", "queue", "replicator"]

[workspace.dependencies]
actix-web = { version = "4", default-features = false }
anyhow = { version = "1.0", default-features = false }
async-trait = { version = "0.1" }
bytes = { version = "1.0" }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5", default-features = false }
config = { version = "0.14", default-features = false }
duckdb = { version = "0.10", default-features = false, features = ["bundled"] }
futures = { version = "0.3", default-features = false }
gcp-bigquery-client = { git = "https://github.com/imor/gcp-bigquery-client.git", branch = "result_set", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres" }
prost = { version = "0.13.1", default-features = false }
secrecy = { version = "0.8.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sqlx = { version = "0.8", default-features = false }
thiserror = "1.0"
tokio = { version = "1.38", default-features = false }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-actix-web = { version = "0.7", default-features = false }
tracing-bunyan-formatter = { version = "0.3", default-features = false }
tracing-log = { version = "0.1.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }

# [patch."https://github.com/imor/gcp-bigquery-client.git"]
# gcp-bigquery-client = { path = "../gcp-bigquery-client" }
