[workspace]

resolver = "2"

members = ["api", "pg_replicate", "replicator"]

[workspace.dependencies]
actix-web = { version = "4", default-features = false }
actix-web-httpauth = { version = "0.8.2", default-features = false }
anyhow = { version = "1.0", default-features = false }
async-trait = { version = "0.1" }
aws-lc-rs = { version = "1.8.1", default-features = false }
base64 = { version = "0.22.1", default-features = false }
bigdecimal = { version = "0.4.6", default-features = false }
bytes = { version = "1.0" }
byteorder = { version = "1.5.0", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5", default-features = false }
config = { version = "0.14", default-features = false }
constant_time_eq = { version = "0.3.1" }
duckdb = { version = "1.0", default-features = false, features = ["bundled"] }
futures = { version = "0.3", default-features = false }
# gcp-bigquery-client = { version = "0.24.1", default-features = false }
gcp-bigquery-client = { git = "https://github.com/imor/gcp-bigquery-client", default-features = false, rev = "4fb420c0077f12674c71d562fa21f913a360981f" }
k8s-openapi = { version = "0.22.0", default-features = false }
kube = { version = "0.93.1", default-features = false }
pg_escape = { version = "0.1.1", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres", rev = "02336bebb28507665184c21566e5d1dc8de1dd7d" }
prost = { version = "0.13.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
reqwest = { version = "0.12", default-features = false }
rustls = { version = "0.23.12", default-features = false }
rustyline = { version = "14.0.0", default-features = false }
secrecy = { version = "0.8.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sqlx = { version = "0.8.2", default-features = false }
thiserror = "1.0"
tokio = { version = "1.38", default-features = false }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, rev = "02336bebb28507665184c21566e5d1dc8de1dd7d" }
tracing = { version = "0.1", default-features = false }
tracing-actix-web = { version = "0.7", default-features = false }
tracing-bunyan-formatter = { version = "0.3", default-features = false }
tracing-log = { version = "0.1.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
utoipa = { version = "4.2.3", default-features = false }
utoipa-swagger-ui = { version = "7.1.0", default-features = false }
uuid = { version = "1.10.0", default-features = false }

# [patch.crates-io]
# gcp-bigquery-client = { path = "../gcp-bigquery-client" }
