[package]
name = "pg_replicate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
duckdb = { workspace = true }
futures = { workspace = true }
gcp-bigquery-client = { workspace = true, features = ["rust-tls", "aws-lc-rs"] }
pin-project-lite = { workspace = true }
postgres-protocol = { workspace = true }
prost = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"]}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-postgres = { workspace = true, features = ["runtime", "with-chrono-0_4"] }
tracing = { workspace = true, default-features = true }

[dev-dependencies]
clap = { workspace = true, default-features = true, features = [
    "std",
    "derive",
] }
tracing-subscriber = { workspace = true, default-features = true, features = [
    "env-filter",
] }
