[package]
name = "pg_replicate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "bigquery"
required-features = ["bigquery"]

[[example]]
name = "duckdb"
required-features = ["duckdb"]

[[example]]
name = "stdout"
required-features = ["stdout"]

[[example]]
name = "delta"
required-features = ["delta"]

[dependencies]
async-trait = { workspace = true }
bigdecimal = { workspace = true, features = ["std"] }
bytes = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
duckdb = { workspace = true, optional = true }
deltalake = { workspace = true,features=["datafusion"],optional=true }
futures = { workspace = true }
gcp-bigquery-client = { workspace = true, optional = true, features = [
    "rust-tls",
    "aws-lc-rs",
] }
pg_escape = { workspace = true }
pin-project-lite = { workspace = true }
postgres-protocol = { workspace = true }
postgres-replication = { workspace = true }
prost = { workspace = true, optional = true }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-postgres = { workspace = true, features = [
    "runtime",
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
tracing = { workspace = true, default-features = true }
uuid = { workspace = true, features = ["v4"] }
async-nats = { version = "0.38.0", optional = true }
anyhow = { workspace = true }
sha256 = { workspace = true }

[dev-dependencies]
clap = { workspace = true, default-features = true, features = [
    "std",
    "derive",
] }
tracing-subscriber = { workspace = true, default-features = true, features = [
    "env-filter",
] }

[features]
bigquery = ["dep:gcp-bigquery-client", "dep:prost"]
duckdb = ["dep:duckdb"]
stdout = []
nats = ["dep:async-nats"]
delta = ["dep:deltalake"]
# When enabled converts unknown types to bytes
unknown_types_to_bytes = []
default = ["unknown_types_to_bytes"]
