[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true, default-features = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true, features = ["std", "log-tracer"] }
tracing-subscriber = { workspace = true, default-features = true, features = [
    "json",
    "env-filter",
    "ansi",
] }
